2005-07-20  DJ Delorie  <dj@redhat.com>

	* config.gcc: Add m32c-elf support.

	* doc/contrib.texi: Mention m32c.
	* doc/extend.texi: Document m32c extensions.
	* doc/install.texi: Mention m32c.
	* doc/invoke.texi: Document m32c options.
	* doc/md.texi: Document m32c constraints.

	* config/m32c/addsub.md: New file.
	* config/m32c/bitops.md: New file.
	* config/m32c/cond.md: New file.
	* config/m32c/jump.md: New file.
	* config/m32c/m32c-lib1.S: New file.
	* config/m32c/m32c-lib2.c: New file.
	* config/m32c/m32c-modes.def: New file.
	* config/m32c/m32c-pragma.c: New file.
	* config/m32c/m32c-protos.h: New file.
	* config/m32c/m32c.abi: New file.
	* config/m32c/m32c.c: New file.
	* config/m32c/m32c.h: New file.
	* config/m32c/m32c.md: New file.
	* config/m32c/m32c.opt: New file.
	* config/m32c/minmax.md: New file.
	* config/m32c/mov.md: New file.
	* config/m32c/muldiv.md: New file.
	* config/m32c/predicates.md: New file.
	* config/m32c/prologue.md: New file.
	* config/m32c/shift.md: New file.
	* config/m32c/t-m32c: New file.

2005-07-20  Kaz Kojima  <kkojima@gcc.gnu.org>

	* config/sh/sh.md (UNSPEC_SP_SET, UNSPEC_SP_TEST): New constants.
	(stack_protect_set, stack_protect_test): New expanders.
        (stack_protect_set_si, stack_protect_set_si_media,
	stack_protect_set_di_media, stack_protect_test_si,
        stack_protect_test_si_media, stack_protect_test_di_media):
	New insns.

2005-07-20  Andrew Pinski  <pinskia@physics.uc.edu>

	* c-typeck.c (output_init_element): Don't copy the INTEGER_CST.

2005-07-20  James A. Morrison  <phython@gcc.gnu.org>

	* tree.h (tree_expr_nonzero_p): Export.
	* fold-const.c (tree_expr_nonzero_p): Likewise.
	Return true for CALL_EXPRs that are alloca calls.
	(fold_binary): Use omit_one_operand when checking EQ_EXPRs or NE_EXPRs
	against zero.
	* tree-flow.h (expr_computes_nonzero): Remove.
	* tree-vrp.c (expr_computes_nonzero): Remove.
 	(vrp_expr_computes_nonzero): Use tree_expr_nonzero_p.
	(extract_range_from_unary_expr): Likewise.